tests/deserializer/cases/02_named.stderr
error: error at callsite #0 bytes(62..66): from_duplicate_key only supported on named fields
 --> tests/deserializer/cases/02_named.rs:3:1
  |
3 | #[duplicate_keys]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `duplicate_keys` (in Nightly builds, run with -Z macro-backtrace for more info)
