tests/deserializer/cases/02_named.rs
use clauser_macros::duplicate_keys;

#[duplicate_keys]
struct Test(Vec<String>);

fn main() {}
